--- a/student_files/session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.html
+++ b/student_files/session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.html
@@ -6,12 +6,12 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="Thanks to Lisa White, Nuffield Department of Medicine, Oxford University and">
+<meta name="author" content="Thanks to Lisa White, and Ben Cooper, Nuffield Department of Medicine, Oxford University and">
 <meta name="author" content="Michael Meehan, Australian Institute of Tropical Health &amp; Medicine, James Cook University.">
 <meta name="author" content="Adapted and presented by Emma McBryde, Australian Institute of Tropical Health &amp; Medicine, James Cook University">
 <meta name="author" content="July 2022">
 
-<title>COVID-19 Modelling in R</title>
+<title>Fitting models in R</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -132,7 +132,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
   <header id="quarto-header" class="headroom fixed-top">
   <nav class="quarto-secondary-nav" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
     <div class="container-fluid d-flex justify-content-between">
-      <h1 class="quarto-secondary-nav-title">COVID-19 Modelling in R</h1>
+      <h1 class="quarto-secondary-nav-title">Fitting models in R</h1>
       <button type="button" class="quarto-btn-toggle btn" aria-label="Show secondary navigation">
         <i class="bi bi-chevron-right"></i>
       </button>
@@ -167,7 +167,12 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.html" class="sidebar-item-text sidebar-link active">COVID-19 Modelling in R</a>
+  <a href="../session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.html" class="sidebar-item-text sidebar-link active">Fitting models in R</a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../session5_fitting_models_in_r/session5_fitting_models_in_r.html" class="sidebar-item-text sidebar-link">COVID-19 Modelling in R</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -210,8 +215,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header">
-<h1 class="title d-none d-lg-block display-7">COVID-19 Modelling in R</h1>
-<p class="author">Thanks to <a href="http://www.tropmedres.ac/researchers/researcher/lisa-white">Lisa White</a>, Nuffield Department of Medicine, Oxford University and</p>
+<h1 class="title d-none d-lg-block display-7">Fitting models in R</h1>
+<p class="author">Thanks to <a href="http://www.tropmedres.ac/researchers/researcher/lisa-white">Lisa White</a>, and <a href="https://www.ndm.ox.ac.uk/team/ben-cooper">Ben Cooper</a>, Nuffield Department of Medicine, Oxford University and</p>
 <p class="author"><a href="https://research.jcu.edu.au/portfolio/michael.meehan1/">Michael Meehan</a>, Australian Institute of Tropical Health &amp; Medicine, James Cook University.</p>
 <p class="author">Adapted and presented by <a href="https://research.jcu.edu.au/portfolio/emma.mcbryde">Emma McBryde</a>, Australian Institute of Tropical Health &amp; Medicine, James Cook University</p>
 <p class="author">July 2022</p>
