--- a/student_materials/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.html
+++ b/student_materials/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.html
@@ -172,7 +172,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../session5_fitting_models_in_r/session5_fitting_models_in_r.html" class="sidebar-item-text sidebar-link">COVID-19 Modelling in R</a>
+  <a href="../session5_fitting_models_in_r/session5_fitting_models_in_r.html" class="sidebar-item-text sidebar-link">Modelling an outbreak - COVID-19 in Thailand</a>
   </div>
 </li>
         <li class="sidebar-item">
