--- a/student_materials/session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.html
+++ b/student_materials/session4_covid_thailand_seir_model/session4_covid_thailand_seir_model.html
@@ -6,6 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="description" content="Write a disease model and compare it to data">
 
 <title>Modelling an outbreak - COVID-19 in Thailand – Modelling Infectious Diseases</title>
 <style>
